--- a/public/assets/css/aboutme.css
+++ b/public/assets/css/aboutme.css
@@ -48,10 +48,9 @@
 }
 
 .selfPort-sizing {
-    /* margin-top: 100px; */
-    border-style: ridge;
-    border-color: rgb(97, 97, 97);
-    border-width: thin;
+    /* border-style: ridge; */
+    /* border-color: rgb(97, 97, 97);
+    border-width: thin; */
     position: relative;
 top: 50%;
 transform: translateY(-50%);
