--- a/public/assets/css/artport.css
+++ b/public/assets/css/artport.css
@@ -125,7 +125,7 @@
     height: 50px;
 }
 
-.lead-body {
+/* .lead-body {
     font-size: 50px;
     text-align: right;
 	padding-top: 30px;
@@ -141,7 +141,7 @@
 	1px -1px 0 rgb(255, 255, 255),
 	-1px 1px 0 rgb(10, 7, 40),
 	1px 1px 0 rgb(249, 249, 249);
-}
+} */
 
 .rowStyle {
     padding-bottom: 20px;
