--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -97,3 +97,13 @@
     -webkit-transform: rotate(45deg) translate(-8px, -8px);
     transform: rotate(45deg) translate(-8px, -8px);
 }
+
+
+
+/* shared between all headers */
+.lead-body {
+
+        padding-top: 20px;
+        padding-bottom: 20px;
+    
+}
