--- a/public/assets/css/aboutme.css
+++ b/public/assets/css/aboutme.css
@@ -95,3 +95,13 @@ transform: translateY(-50%);
 .card-title {
     text-align: center;
 }
+
+.row-height{
+    margin-bottom: 100px;
+    /* margin-top: 100px; */
+}
+
+.row-top {
+    margin-top: 50px;
+}
+
