--- a/public/assets/css/aboutme.css
+++ b/public/assets/css/aboutme.css
@@ -4,6 +4,7 @@
     overflow: hidden;
     position: relative;
     width: 100%;
+    height: auto;
     background-image: url('../img/sweden.jpg');
     background-attachment: fixed;
     background-size: cover;
@@ -20,6 +21,7 @@
     overflow: hidden;
     position: relative;
     width: 100%;
+    height: auto;
     background-image: url('../img/reflection.jpg');
     background-attachment: fixed;
     background-size: cover;
